--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>Boggle</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+
+    <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
-    test
-    <script src="src/index.js">
 
-    </script>
+    <div class="row">
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+    </div>
+    <div class="row">
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+     </div>
+     <div class="row">
+        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+      </div>
+
+
+    <script src="src/index.js"></script>
+
   </body>
 </html>
