new game function

--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
   </head>
   <body>
 
-    <div class="row">
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-    </div>
-    <div class="row">
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-    </div>
-    <div class="row">
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-     </div>
-     <div class="row">
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-      </div>
+  <div class="row">
+    <div class="col" id="box0"><p></p></div>
+    <div class="col" id="box1"><p></p></div>
+    <div class="col" id="box2"><p></p></div>
+    <div class="col" id="box3"><p></p></div>
+  </div>
+  <div class="row">
+    <div class="col" id="box4"><p></p></div>
+    <div class="col" id="box5"><p></p></div>
+    <div class="col" id="box6"><p></p></div>
+    <div class="col" id="box7"><p></p></div>
+  </div>
+  <div class="row">
+    <div class="col" id="box8"><p></p></div>
+    <div class="col" id="box9"><p></p></div>
+    <div class="col" id="box10"><p></p></div>
+    <div class="col" id="box11"><p></p></div>
+  </div>
+  <div class="row">
+    <div class="col" id="box12"><p></p></div>
+    <div class="col" id="box13"><p></p></div>
+    <div class="col" id="box14"><p></p></div>
+    <div class="col" id="box15"><p></p></div>
+  </div>
 
 
     <script src="src/index.js"></script>
