--- a/index.html
+++ b/index.html
@@ -7,39 +7,49 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script> -->
 
     <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
-
-    <div class="row">
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-    </div>
-    <div class="row">
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-      <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-    </div>
-    <div class="row">
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-       <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-     </div>
-     <div class="row">
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
-        <div class="col s12 m6 l3"><p>s12 m6 l3</p></div>
+    <div class="wrapper">
+    <div class="board">
+      <div class="boggle-row one">
+        <div class="box" id="1">1</div>
+        <div class="box" id="2">2</div>
+        <div class="box" id="3">3</div>
+        <div class="box" id="4">4</div>
       </div>
+      <div class="boggle-row">
+        <div class="box" id="5">5</div>
+        <div class="box" id="6">6</div>
+        <div class="box" id="7">7</div>
+        <div class="box" id="8">8</div>
+      </div>
+      <div class="boggle-row three">
+        <div class="box" id="9">9</div>
+        <div class="box" id="10">10</div>
+        <div class="box" id="11">11</div>
+        <div class="box" id="12">12</div>
+      </div>
+      <div class="boggle-row four">
+        <div class="box" id="13">13</div>
+        <div class="box" id="14">14</div>
+        <div class="box" id="15">15</div>
+        <div class="box" id="16">16</div>
+      </div>
+    </div>
+  </div>
 
+    <div class="test">
+      <div class="">
+        hello
+      </div>
+    </div>
 
     <script src="src/index.js"></script>
-
   </body>
 </html>
