--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="test2">
-        <div class="">
+        <div id="words">
           hello again
         </div>
       </div>
