--- a/index.html
+++ b/index.html
@@ -48,12 +48,19 @@
 
   <!-- <button class="ui positive basic button"type="button" id="new-board-button" name="button">new board</button> -->
 
-  <button class="btn waves-effect waves-light" id="new-board-button" type="button" 
+  <button class="btn waves-effect waves-light" id="new-board-button" type="button"
     <i class="material-icons right">New Board</i>
-  </button>
+  </button><br>
 
+  <div class="ui input" id="wordInput">
+    <input type="text" placeholder="Enter words here">
+  </div>
 
-    <script src="src/solve.js">
+  <div>
+    <ul id="wordList">
+
+    </ul>
+  </div>
 
     </script>
     <script src="src/index.js"></script>
