added timer and score

--- a/index.html
+++ b/index.html
@@ -44,9 +44,14 @@
         <div class="box" id="16" data-value="" data-action="unused"></div>
       </div>
     </div>
+
+    <div class="existing-words">
+      <ul id="wordList">
+
+      </ul>
+    </div>
   </div>
 
-  <!-- <button class="ui positive basic button"type="button" id="new-board-button" name="button">new board</button> -->
 
   <button class="btn waves-effect waves-light" id="new-board-button" type="button"
     <i class="material-icons right">New Board</i>
@@ -56,11 +61,15 @@
     <input type="text" placeholder="Enter words here">
   </div>
 
-  <div>
-    <ul id="wordList">
+  <div id="score">
 
-    </ul>
   </div>
+
+  <div id="timer">
+
+  </div>
+
+
 
     </script>
     <script src="src/index.js"></script>
