pixed double words bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Boggle</title>
     <!-- google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Bangers|Caudex|Cormorant+Upright|Faster+One|Londrina+Outline|Megrim|Nixie+One|Playfair+Display+SC|Poiret+One|Syncopate|Love+Ya+Like+A+Sister|Kranky" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Caudex|Cormorant+Upright|Faster+One|Londrina+Outline|Megrim|Nixie+One|Playfair+Display+SC|Poiret+One|Syncopate|Love+Ya+Like+A+Sister|Kranky|Pacifico" rel="stylesheet">
 
 
 
@@ -29,7 +29,7 @@
         <h4 id="correct-words">My Words:</h4>
         <ul id="word-list"></ul>
       </div>
-    
+
 
     <div class="board" id="board">
       <div class="boggle-row one">
