--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Bangers|Caudex|Cormorant+Upright|Faster+One|Londrina+Outline|Megrim|Nixie+One|Playfair+Display+SC|Poiret+One|Syncopate|Love+Ya+Like+A+Sister|Kranky|Pacifico" rel="stylesheet">
 
+    <!-- materialize icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
 
@@ -67,9 +69,9 @@
     <button class="btn waves-effect waves-light" id="new-board-button" type="button"
       <i class="material-icons right">New Board</i>
     </button><br>
-    <button class="btn waves-effect waves-light" id="high-scores-button" type="button"
+    <!-- <button class="btn waves-effect waves-light" id="high-scores-button" type="button"
       <i class="material-icons right">High Scores</i>
-    </button><br>
+    </button><br> -->
   </div>
 </div>
 
