added high score table

--- a/index.html
+++ b/index.html
@@ -33,6 +33,23 @@
       </div>
 
 
+      <div class="highscores">
+          <h4 id="high-scores-header">High Scores:</h4>
+          <table class="centered" id="high-scores-table">
+            <thead>
+              <tr>
+                  <th>Name</th>
+                  <th>High Score</th>
+              </tr>
+            </thead>
+
+            <tbody>
+
+            </tbody>
+          </table>
+          <ul id="high-scores"></ul>
+      </div>
+
     <div class="board" id="board">
       <div class="boggle-row one">
         <div class="box" id="1" data-value="" data-action="unused"></div>
