auto click on input field on new board

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
   <div class="ui search" id="word-input">
-    <input class="prompt" type="text" placeholder="Type a word...">
+    <input class="prompt" type="text" id="inputBox" placeholder="Type a word...">
     <div class="results"></div>
   </div>
 
