--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
   <div class="row">
 
   <div class="buttons">
-    <button class="btn waves-effect waves-light" id="new-board-button" type="button">
+    <button class="ui inverted blue button" id="new-board-button">
       New Game  <i class="material-icons"> replay</i>
     </button>
   </div>
 </div>
 
 
-  <div class="ui search" id="word-input">
+  <div class="ui transparent input" id="word-input">
     <input class="prompt" type="text" id="inputBox" placeholder="Type a word...">
     <div class="results"></div>
   </div>
